--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github branch create</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Github branch create</h1>
-    
-</body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque necessitatibus possimus atque
+      perferendis totam sit tempore dolore modi, accusamus mollitia obcaecati, tenetur reprehenderit
+      expedita natus vero illo reiciendis aliquam nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sint voluptatibus veritatis sit mollitia incidunt pariatur esse optio nobis saepe!
+    </p>
+  </body>
 </html>
